<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_recipe_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:text="@string/lbl_ingredients"
            android:textSize="24sp"
            android:id="@+id/lbl_ingredients"
            />

        <TableLayout
            android:id="@+id/tl_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_margin="8dp"
            android:stretchColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:padding="8dp"
                    android:text="@string/str_quantity_header"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="8dp"
                    android:text="@string/str_measure_header"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="8dp"
                    android:text="@string/str_ingredient_header"
                    android:textStyle="bold" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:text="@string/lbl_steps"
            android:textSize="24sp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_steps"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:background="@color/colorStepsBackground" />


    </LinearLayout>
</ScrollView>