<resources>
    <string name="app_name">Baking Time!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error_msg">Oops there was an error. Please try again.</string>
    <string name="msg_no_internet_connection">No Internet Connection Detected. Please try again later.</string>
    <string name="iv_recipe_content_description">Recipe Image</string>

    <string name="str_brownies">Brownies</string>
    <string name="str_cheesecake">Cheesecake</string>
    <string name="str_yellow_cake">Yellow Cake</string>
    <string name="str_nutella_pie">Nutella Pie</string>


    <string name="str_quantity_header">Quantity</string>
    <string name="str_measure_header">Measure</string>
    <string name="str_ingredient_header">Ingredient</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_steps">Steps</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="msg_no_media_available">No media available</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_string">No recipe selected</string>
    <string name="title_collection_widget">Baking Recipe</string>
</resources>
